// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. scale correctly when spreading fingers 1`] = `
<AnimatedComponent
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 3,
        },
        Object {
          "rotate": "0 deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
>
  <Text>
    Hello world!
  </Text>
</AnimatedComponent>
`;

exports[`2. rotate anti-clockwise when turning fingers 1`] = `
<AnimatedComponent
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
        Object {
          "rotate": "90 deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
>
  <Text>
    Hello world!
  </Text>
</AnimatedComponent>
`;

exports[`3. rotate clockwise when turning fingers 1`] = `
<AnimatedComponent
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
        Object {
          "rotate": "270 deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
>
  <Text>
    Hello world!
  </Text>
</AnimatedComponent>
`;

exports[`4. scale and rotate when spreading and rotating fingers 1`] = `
<AnimatedComponent
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 2.9154759474226504,
        },
        Object {
          "rotate": "-5.906 deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
>
  <Text>
    Hello world!
  </Text>
</AnimatedComponent>
`;

exports[`5. do nothing if a finger is removed while interacting 1`] = `
<AnimatedComponent
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
        Object {
          "rotate": "0 deg",
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
>
  <Text>
    Hello world!
  </Text>
</AnimatedComponent>
`;
